# dopi

./: .gitignore  Dockerfile  README.md  cli.py  deploy.sh  helpers.py  http_client.py  lint.sh  package-lock.json  package.json  pyproject.toml  submissions.py
src/: app.py  cli.py  config.py  crossref.py  emailer.py  helpers.py  http_client.py  submissions.py  validators.py
src/static/: index.html  scripts.js  styles.css  submit.html  utils.js
static/: index.html  scripts.js  utils.js
tests/: test_app.py  test_crossref.py  test_emailer.py  test_helpers.py  test_http_client.py  test_submissions.py  test_validators.py  utils.test.js
