[project]
name = "dopi"
readme = "README.md"
description = "Calls for interacting with DOIs"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
[project.scripts]
dopi = "cli:main"
dependencies = [
    "bottle==0.13.2",
]
[project.optional-dependencies]
lint = [
    "ruff==0.9.6",
    "mypy==1.15.0",
]
test = [
    "webtest==3.0.4",
]
[tool.ruff]
line-length = 120
indent-width = 4
[tool.ruff.lint]
# Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]
[tool.mypy]
ignore_missing_imports = true
[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"
